--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Larry Love Squad</title>
-<meta name="description" content="Larry Love Squad">
-<meta name="author" content="LLS / LLM">
-<link rel="stylesheet" href="css/screen.css">
-</head>
+    
+    <head>
+        <meta charset="UTF-8">
+        <title>Larry Love Squad</title>
+        <meta name="description" content="Larry Love Squad">
+        <meta name="author" content="LLS / LLM">
+        <link rel="stylesheet" href="css/screen.css">
+    </head>
 
-<body>
+    <body>
 
-	<h1>We love Larry! ❤</h1>
+        <h1>We love Larry! ❤</h1>
 
-</body></html>
+    </body>
+
+</html>
